k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productkub-backend-service

spec:
  type: NodePort

  selector:
    app: productkub-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
